# awgkeygen

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  awgkeygen.service  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  release-please.yml
bot/: config.py  database.py  keyboards.py  main.py  middleware.py  texts.py  utils.py  version.py
bot/awg/: __init__.py  config_parser.py  manager.py  stats.py  vpnuri.py
bot/handlers/: __init__.py  admin.py  user.py
bot/services/: __init__.py  admin_actions.py  keys.py  notify.py
docs/screenshots/: README.md
scripts/: docker-watchdog.sh
